--- a/frontEnd/p2.html
+++ b/frontEnd/p2.html
@@ -128,7 +128,8 @@
 <body>
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p>Health Ninja</p>
+    <p>Dish Recommendation </p>
+     
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
       <p><button onclick="document.getElementById('Choose Flavor').style.display='block'" class="w3-button w3-black">Choose Flavor</button></p>
@@ -137,7 +138,8 @@
   </div>
   <div class="w3-display-bottomleft w3-container">
     <p class="w3-xlarge">monday - friday 10-23 | saturday 14-02</p>
-    <p class="w3-large">Georgia Tech, Atlanta</p>
+    <p class="w3-large">Mumbai, India</p>
+      <p  class="w3-large"> Developed by Inziya Dossa & Radhika Choudhary</p>
     <p>powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
   </div>
 </div>
