--- a/frontEnd/p2.html
+++ b/frontEnd/p2.html
@@ -128,7 +128,7 @@
 <body>
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
-    <p>Dish Recommendation </p>
+    <p>healthy Foodie </p>
      
   </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
